[package]
name = "tube_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "mysql",
  "chrono",
] }
chrono = "0.4"
dotenv = "0.15"
twilio = "*"
