[package]
name = "tube_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
twilio = "*"
clap = { version = "4.3", features = ["derive"] }
serde_json = "1.0.99"
rand = "0.8.5"
